--- a/template/submit.yml.erb
+++ b/template/submit.yml.erb
@@ -15,7 +15,7 @@
     num_cores = max_cores
   end
 
-  memory = num_cores * memory_multiplier.blank? ? 1024 : memory_multiplier.to_i
+  memory = num_cores * (memory_multiplier.blank? ? 1024 : memory_multiplier.to_i)
   slurm_args = []
   if gpu_vram > 0
     # You need to have at least the amount of VRAM accessible in RAM
