--- a/fsl_gui_template/template/script.sh.erb
+++ b/fsl_gui_template/template/script.sh.erb
@@ -7,7 +7,8 @@ export SINGULARITYENV_VNC_PW="$password"
 export SINGULARITYENV_VNC_RESOLUTION="<%= context.bc_vnc_resolution %>"
 export SINGULARITYENV_PS1="${debian_chroot:+($debian_chroot)}\[\033[01;32m\]\u@\h\[\033[00m\]:\[\033[01;34m\]\w\[\033[00m\]\$ "
 export SINGULARITYENV_DISPLAY=":$x11port"
-
+export SINGULARITYENV_PREPEND_PATH=""
+export SINGULARITYENV_APPEND_PATH=""
 SINGULARITY_OPTIONS=""
 <% if context.gpu.present? and context.gpu.to_i > 0 %>
   SINGULARITY_OPTIONS='--nv'
