--- a/matlab_template/template/script.sh.erb
+++ b/matlab_template/template/script.sh.erb
@@ -1,11 +1,9 @@
 #!/usr/bin/env bash
-# Set TMUX Environment Variables
-TMUX_SOCKET="J${SLURM_JOB_ID}.sock"
-TMUX_SESSION="J${SLURM_JOB_ID}"
-export TMUX_SOCKET TMUX_SESSION
 
-mkdir app_log tmp
-export SINGULARITY_BIND="/mnt,$(pwd)/app_log:/var/log/app,$(pwd)/tmp:/tmp,/run:/run,/opt/ood_apps:/opt/ood_apps"
+# Set singularity environment variables
+export SINGULARITY_BIND="/mnt,/tmp,/run,/opt/ood_apps:/opt/ood_apps"
+export SINGULARITYENV_MLM_LICENSE_FILE="${HOME}/.matlab-license"
+
 export SINGULARITYENV_PS1="${debian_chroot:+($debian_chroot)}\[\033[01;32m\]\u@\h\[\033[00m\]:\[\033[01;34m\]\w\[\033[00m\]\$ "
 
 export SINGULARITYENV_PREPEND_PATH=""
@@ -21,4 +19,4 @@ singularity exec ${SINGULARITY_OPTIONS} /opt/ood_apps/images/<%= context.bc_acco
   -t 'cursorStyle=bar' \
 	-t 'cursorBlink=true' \
 	-t 'theme={"background": "#282a36", "foreground": "#f8f8f2"}' \
-  /usr/bin/tmux -L "$TMUX_SOCKET" new -A -s "$TMUX_SESSION"
+  /usr/bin/matlab -nodisplay -r "disp(['Current folder: ' pwd])"
