--- a/afni_gui_template/template/script.sh.erb
+++ b/afni_gui_template/template/script.sh.erb
@@ -5,6 +5,7 @@ export SINGULARITYENV_VNC_PORT="$vncport"
 export SINGULARITYENV_NO_VNC_PORT="$port"
 export SINGULARITYENV_VNC_PW="$password"
 export SINGULARITYENV_VNC_RESOLUTION="<%= context.bc_vnc_resolution %>"
+export SINGULARITYENV_NO_AUDIO="1"
 export SINGULARITYENV_PS1="${debian_chroot:+($debian_chroot)}\[\033[01;32m\]\u@\h\[\033[00m\]:\[\033[01;34m\]\w\[\033[00m\]\$ "
 export SINGULARITYENV_DISPLAY=":$x11port"
 
