--- a/doom_gui_template/template/script.sh.erb
+++ b/doom_gui_template/template/script.sh.erb
@@ -1,5 +1,6 @@
 #!/usr/bin/env bash
-export SINGULARITY_BIND="/mnt,/tmp,/run,/opt/ood_apps,/etc/kasmvnc:/tmp/kasmvnc"
+mkdir /tmp/kasmvnc
+export SINGULARITY_BIND="/mnt,/tmp,/run,/opt/ood_apps,/tmp/kasmvnc:/etc/kasmvnc"
 export SINGULARITYENV_VNC_PW="$password"
 export SINGULARITYENV_VNC_RESOLUTION="<%= context.bc_vnc_resolution %>"
 export SINGULARITYENV_PS1="${debian_chroot:+($debian_chroot)}\[\033[01;32m\]\u@\h\[\033[00m\]:\[\033[01;34m\]\w\[\033[00m\]\$ "
