--- a/template/view.html.erb
+++ b/template/view.html.erb
@@ -7,7 +7,7 @@
     form.action = "https://ttyd:<%= password %>@" + window.location.host.split(":")[0] + "/node/<%= host %>/<%= port %>/"
 }
 </script>
-<form id="<%= form_id %>" method="post" target="_blank" onsubmit="get_<%= form_id %>_action(this)">
+<form id="<%= form_id %>" method="get" target="_blank" onsubmit="get_<%= form_id %>_action(this)">
   <button class="btn btn-primary" type="submit">
     <i class="fa fa-eye"></i> Connect
   </button>
