--- a/doom_gui_template/template/script.sh.erb
+++ b/doom_gui_template/template/script.sh.erb
@@ -7,7 +7,7 @@ export SINGULARITY_BIND="/mnt,/tmp,/run,/opt/ood_apps"
 export SINGULARITYENV_VNC_PW="$password"
 export SINGULARITYENV_VNC_RESOLUTION="<%= context.bc_vnc_resolution %>"
 export SINGULARITYENV_PS1="${debian_chroot:+($debian_chroot)}\[\033[01;32m\]\u@\h\[\033[00m\]:\[\033[01;34m\]\w\[\033[00m\]\$ "
-export SINGULARITYENV_XVNC_OPTIONS="-websocketPort $port -PlainUsers ttyd"
+export SINGULARITYENV_XVNC_OPTIONS="-websocketPort $port -PlainUsers ttyd -SecurityTypes 'VncAuth,Plain,TLSPlain'"
 
 SINGULARITY_OPTIONS=""
 <% if context.gpu.present? and context.gpu.to_i > 0 %>
