--- a/fmriprep_template/template/script.sh.erb
+++ b/fmriprep_template/template/script.sh.erb
@@ -27,7 +27,6 @@ options << "--dummy-scans #{context.dummy_scans}" if context.dummy_scans.present
 options << "--random-seed #{context.random_seed}" if context.random_seed.present?
 options << "--output-layout #{context.output_layout}" if context.output_layout.present?
 options << "--verbose" if context.verbose.present?
-options << "--work-dir #{Dir.pwd}"
 
 all_options = options.join(" ")
 %>
@@ -38,5 +37,4 @@ SINGULARITY_OPTIONS=""
 <% if context.gpu.present? and context.gpu.to_i > 0 %>
   SINGULARITY_OPTIONS='--nv'
 <% end %>
-cd "${HOME}"
-singularity exec ${SINGULARITY_OPTIONS} /opt/ood_apps/images/<%= context.bc_account %>/<%= context.bc_account %>_<%= context.app_version %>.sif /opt/conda/envs/fmriprep/bin/fmriprep <%= all_options %>
+singularity exec ${SINGULARITY_OPTIONS} /opt/ood_apps/images/<%= context.bc_account %>/<%= context.bc_account %>_<%= context.app_version %>.sif /opt/conda/envs/fmriprep/bin/fmriprep <%= all_options %> --work-dir $(pwd)
