--- a/fmriprep_template/template/script.sh.erb
+++ b/fmriprep_template/template/script.sh.erb
@@ -27,12 +27,13 @@ options << "--dummy-scans #{context.dummy_scans}" if context.dummy_scans.present
 options << "--random-seed #{context.random_seed}" if context.random_seed.present?
 options << "--output-layout #{context.output_layout}" if context.output_layout.present?
 options << "--verbose" if context.verbose != "0"
-options << "--fs-license-file /usr/share/freesurfer_license.txt"
 options << "--no-submm-recon" if context.no_submm_recon != "0"
 options << "--fs-no-reconall" if context.fs_no_reconall != "0"
 options << "--fs-no-resume" if context.fs_no_resume != "0"
-options << "--fs-subjects-dir" if context.fs_subjects_dir.present?
-
+options << "--fs-subjects-dir #{context.fs_subjects_dir}" if context.fs_subjects_dir.present?
+options << "--fs-license-file /usr/share/freesurfer_license.txt"
+options << "--resource-monitor"
+options << "--write-graph""
 
 all_options = options.join(" ")
 %>
