--- a/template/template/script.sh.erb
+++ b/template/template/script.sh.erb
@@ -5,7 +5,7 @@ TMUX_SESSION="J${SLURM_JOB_ID}"
 export TMUX_SOCKET TMUX_SESSION
 
 mkdir app_log tmp
-export SINGULARITY_BIND="/mnt,$(pwd)/app_log:/var/log/app,$(pwd)/tmp:/tmp,/run:/run,/opt/ood_apps:/opt/ood_apps"
+export SINGULARITY_BIND="/mnt,$(pwd)/app_log:/var/log/app,/tmp,/run,/opt/ood_apps"
 export SINGULARITYENV_PS1="${debian_chroot:+($debian_chroot)}\[\033[01;32m\]\u@\h\[\033[00m\]:\[\033[01;34m\]\w\[\033[00m\]\$ "
 
 export SINGULARITYENV_PREPEND_PATH=""
